--- a/src/coreclr/interpreter/CMakeLists.txt
+++ b/src/coreclr/interpreter/CMakeLists.txt
@@ -2,6 +2,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(INTERPRETER_SOURCES
   compiler.cpp
   compileropt.cpp
+  datastructs.cpp
   intops.cpp
   eeinterp.cpp)
 
